# ipconfig_util

./: .gitignore
provide_ipconfig/: Cargo.toml  ipconfig.txt
provide_ipconfig/src/: main.rs
send_ipconfig/: Cargo.toml
send_ipconfig/src/: main.rs
