[package]
name = "provide_ipconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.13.0"
actix-http = { version = "3.3.1", features = ["ws"] }
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
lazy_static = "1.4.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
log = "0.4.20"
env_logger = "0.10"
parking_lot = { version = "0.12.1", features = ["arc_lock", "deadlock_detection"] }
dotenv = "0.15.0"
