[package]
name = "send_ipconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.13.0"
actix-http = { version = "3.3.1", features = ["ws"] }
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
log = "0.4.20"
env_logger = "0.10"
dotenv = "0.15.0"
reqwest = "0.11.20"
